# partial

./: .gitlab-ci.yml  README.rst  pyproject.toml  setup.cfg  setup.py
nagare/: partial.py
src/nagare/: partial.py
